--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
+        "masbug/flysystem-google-drive-ext": "^2.2",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
